# pyqenc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  pytest.ini
.kiro/steering/: agent-commands.md  agent-specs.md  coding-standards.md  dependencies.md
docs/: architecture.md  audio processing graph.mermaid  pipeline_flow.d2
pyqenc/: __init__.py  api.py  cli.py  config.py  constants.py  default_config.yaml  models.py  orchestrator.py  phase.py  progress.py  quality.py  state.py
pyqenc/phases/: __init__.py  audio.py  chunking.py  encoding.py  extraction.py  job.py  merge.py  optimization.py  recovery.py
pyqenc/utils/: __init__.py  alive.py  cleanup.py  crop.py  disk_space.py  ffmpeg.py  ffmpeg_runner.py  ffmpeg_wrapper.py  log_format.py  logging.py  performance.py  progress_reporter.py  validation.py  visualization.py  yaml_utils.py
samples/: SAMPLES.md
tests/: README.md  __init__.py  test_installation.py
tests/e2e/: __init__.py  test_complete_pipeline.py
tests/fixtures/: __init__.py  config_fixtures.py  metric_fixtures.py  state_fixtures.py  video_fixtures.py
tests/integration/: __init__.py  test_encoding_quality.py  test_extraction_chunking.py  test_resumption.py
tests/unit/: test_audio.py  test_chunking.py  test_config.py  test_encoding_crop.py  test_encoding_phase.py  test_ffmpeg_runner.py  test_job_phase.py  test_models.py  test_optimization_phase.py  test_phase_result.py  test_progress.py  test_progress_bar.py  test_quality.py  test_recovery_state.py  test_refactor_core.py  test_video_metadata.py
(+42 files in other folders)
